[gd_scene load_steps=29 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://images/back2.jpg" type="Texture" id=2]
[ext_resource path="res://images/Ship1.png" type="Texture" id=3]
[ext_resource path="res://images/planet1.png" type="Texture" id=4]
[ext_resource path="res://FlyingObjects.gd" type="Script" id=5]
[ext_resource path="res://images/planet2.png" type="Texture" id=6]
[ext_resource path="res://images/SpaceMan.png" type="Texture" id=7]
[ext_resource path="res://fonts/11814.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://images/ouch!.png" type="Texture" id=9]
[ext_resource path="res://Player.tscn" type="PackedScene" id=10]
[ext_resource path="res://StartPlank.gd" type="Script" id=11]
[ext_resource path="res://images/plank2.png" type="Texture" id=12]
[ext_resource path="res://StartButton.gd" type="Script" id=13]
[ext_resource path="res://sounds/bag_raiders_starting.ogg" type="AudioStream" id=14]
[ext_resource path="res://images/стрелка.png" type="Texture" id=15]
[ext_resource path="res://StartScreen.tscn" type="PackedScene" id=16]
[ext_resource path="res://fonts/Font_theme.tres" type="Theme" id=17]
[ext_resource path="res://images/pausa.png" type="Texture" id=18]
[ext_resource path="res://sounds/bag_raiders2.ogg" type="AudioStream" id=19]

[sub_resource type="GDScript" id=1]

script/source = "extends Node2D

func _physics_process(delta):
	"

[sub_resource type="DynamicFont" id=2]

size = 55
use_mipmaps = false
use_filter = false
font_data = ExtResource( 8 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 55
use_mipmaps = false
use_filter = false
font_data = ExtResource( 8 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="InputEventAction" id=4]

device = 0
action = "ui_accept"
pressed = false

[sub_resource type="ShortCut" id=5]

shortcut = SubResource( 4 )

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 54.238, 11.0417 )

[sub_resource type="DynamicFont" id=7]

size = 60
use_mipmaps = false
use_filter = false
font_data = ExtResource( 8 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Animation" id=8]

length = 23.0
loop = false
step = 0.1
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 23 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play"
}, {
"args": [  ],
"method": "stop"
} ]
}

[sub_resource type="Animation" id=9]

length = 15.0
loop = false
step = 0.1
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 15 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play"
}, {
"args": [  ],
"method": "stop"
} ]
}

[node name="Game" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Background" type="Node2D" parent="." index="0"]

[node name="background_image" type="Sprite" parent="Background" index="0"]

position = Vector2( 0, -5 )
texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="background_image2" type="Sprite" parent="Background" index="1"]

position = Vector2( 0, 1274.93 )
texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Images" type="Node2D" parent="." index="1"]

pause_mode = 2
_sections_unfolded = [ "Pause" ]

[node name="SpaceShips" type="Node2D" parent="Images" index="0"]

pause_mode = 2
editor/display_folded = true
visible = false
_sections_unfolded = [ "Pause" ]

[node name="SpaseShip1" type="Sprite" parent="Images/SpaceShips" index="0"]

position = Vector2( 972.762, 284.182 )
rotation = -0.0860169
scale = Vector2( 0.0808534, 0.0759038 )
texture = ExtResource( 3 )

[node name="Saturns" type="Node2D" parent="Images" index="1"]

pause_mode = 2
_sections_unfolded = [ "Pause" ]

[node name="Saturn1" type="Sprite" parent="Images/Saturns" index="0"]

position = Vector2( 193.589, 1352.89 )
rotation = -2.10213
scale = Vector2( 0.54363, 0.543145 )
texture = ExtResource( 4 )
script = ExtResource( 5 )

[node name="Saturn2" type="Sprite" parent="Images/Saturns" index="1"]

position = Vector2( -66.9909, 565.749 )
rotation = -1.02363
scale = Vector2( 0.577609, 0.577093 )
texture = ExtResource( 4 )
script = ExtResource( 5 )

[node name="Saturn3" type="Sprite" parent="Images/Saturns" index="2"]

position = Vector2( 731.852, -105.812 )
rotation = -1.02363
scale = Vector2( 0.702885, 0.702257 )
texture = ExtResource( 4 )
script = ExtResource( 5 )

[node name="Saturn4" type="Sprite" parent="Images/Saturns" index="3"]

position = Vector2( 792.675, 958.566 )
rotation = -1.07835
scale = Vector2( -0.696952, 0.631051 )
texture = ExtResource( 4 )
script = ExtResource( 5 )

[node name="PinkPlanets" type="Node2D" parent="Images" index="2"]

pause_mode = 2
editor/display_folded = true
_sections_unfolded = [ "Pause" ]

[node name="PinkPlanet1" type="Sprite" parent="Images/PinkPlanets" index="0"]

position = Vector2( 408.25, 1338.48 )
rotation = -2.59707
scale = Vector2( 0.275541, 0.263448 )
texture = ExtResource( 6 )
script = ExtResource( 5 )

[node name="PinkPlanet2" type="Sprite" parent="Images/PinkPlanets" index="1"]

position = Vector2( -87.1295, 61.6481 )
rotation = -2.59707
scale = Vector2( 0.423572, 0.404981 )
texture = ExtResource( 6 )
script = ExtResource( 5 )

[node name="PinkPlanet3" type="Sprite" parent="Images/PinkPlanets" index="2"]

position = Vector2( 823.118, 491.438 )
rotation = -2.59707
scale = Vector2( 0.48963, 0.468141 )
texture = ExtResource( 6 )
script = ExtResource( 5 )

[node name="Cosmonauts" type="Node2D" parent="Images" index="3"]

pause_mode = 2
editor/display_folded = true
_sections_unfolded = [ "Pause" ]

[node name="Cosmonaut1" type="Sprite" parent="Images/Cosmonauts" index="0"]

position = Vector2( 766.575, 268.403 )
rotation = 4.7733
scale = Vector2( 0.271194, 0.253164 )
texture = ExtResource( 7 )
script = ExtResource( 5 )

[node name="Cosmonaut2" type="Sprite" parent="Images/Cosmonauts" index="1"]

position = Vector2( -62.1716, 375.348 )
rotation = 2.94949
scale = Vector2( 0.201302, 0.187918 )
texture = ExtResource( 7 )
script = ExtResource( 5 )

[node name="Cosmonaut3" type="Sprite" parent="Images/Cosmonauts" index="2"]

position = Vector2( 757.32, 1087.61 )
rotation = 5.94626
scale = Vector2( -0.285872, 0.260253 )
texture = ExtResource( 7 )
script = ExtResource( 5 )

[node name="Cosmonaut4" type="Sprite" parent="Images/Cosmonauts" index="3"]

position = Vector2( 798.853, 23.9729 )
rotation = 2.55916
scale = Vector2( 0.259015, 0.241794 )
texture = ExtResource( 7 )
script = ExtResource( 5 )

[node name="Cosmonaut5" type="Sprite" parent="Images/Cosmonauts" index="4"]

position = Vector2( -50.2935, 1301.46 )
rotation = 3.64
scale = Vector2( 0.263827, 0.246287 )
texture = ExtResource( 7 )
script = ExtResource( 5 )

[node name="Cosmonaut6" type="Sprite" parent="Images/Cosmonauts" index="5"]

position = Vector2( 671.206, 1335.81 )
rotation = 3.64
scale = Vector2( 0.339603, 0.317024 )
texture = ExtResource( 7 )
script = ExtResource( 5 )

[node name="Cosmonaut7" type="Sprite" parent="Images/Cosmonauts" index="6"]

position = Vector2( 770.528, 665.429 )
rotation = 3.01009
scale = Vector2( -0.420151, 0.409566 )
texture = ExtResource( 7 )
script = ExtResource( 5 )

[node name="Cosmonaut8" type="Sprite" parent="Images/Cosmonauts" index="7"]

position = Vector2( -98.5245, 788.628 )
rotation = 2.68304
scale = Vector2( -0.428102, 0.40633 )
texture = ExtResource( 7 )
script = ExtResource( 5 )

[node name="Cosmonaut9" type="Sprite" parent="Images/Cosmonauts" index="8"]

position = Vector2( 212.391, -40.9788 )
rotation = 1.23784
scale = Vector2( -0.408602, 0.403126 )
texture = ExtResource( 7 )
script = ExtResource( 5 )

[node name="Cosmonaut10" type="Sprite" parent="Images/Cosmonauts" index="9"]

position = Vector2( 477.609, -75.1601 )
rotation = 2.62009
scale = Vector2( -0.407552, 0.411106 )
texture = ExtResource( 7 )
script = ExtResource( 5 )

[node name="Cosmonaut11" type="Sprite" parent="Images/Cosmonauts" index="10"]

position = Vector2( -23.4332, -23.2058 )
rotation = 3.64
scale = Vector2( 0.336929, 0.314528 )
texture = ExtResource( 7 )
script = ExtResource( 5 )

[node name="planks" type="Node2D" parent="." index="2"]

script = SubResource( 1 )

[node name="End_screen" type="Control" parent="." index="3"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="ColorRect" type="ColorRect" parent="End_screen" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -29.0
margin_top = -16.0
margin_right = 748.0
margin_bottom = 1306.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 0.618784 )

[node name="your_score" type="Label" parent="End_screen/ColorRect" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 217.0
margin_top = 185.0
margin_right = 635.0
margin_bottom = 241.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Твой счёт:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="max_score" type="Label" parent="End_screen/ColorRect" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 187.0
margin_top = 434.0
margin_right = 627.0
margin_bottom = 493.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Твой рекорд:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="Retry_label" type="Label" parent="End_screen/ColorRect" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 277.0
margin_top = 848.0
margin_right = 497.0
margin_bottom = 909.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Заново"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors" ]

[node name="Retry" type="TextureButton" parent="End_screen/ColorRect/Retry_label" index="0"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -47.0
margin_top = -20.0
margin_right = 250.0
margin_bottom = 68.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = SubResource( 5 )
group = null
_sections_unfolded = [ "Pause", "Textures" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Exit_label" type="Label" parent="End_screen/ColorRect" index="3"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 285.0
margin_top = 652.0
margin_right = 490.0
margin_bottom = 713.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Выйти"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Pause", "custom_colors" ]

[node name="Exit" type="TextureButton" parent="End_screen/ColorRect/Exit_label" index="0"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -50.0
margin_top = -15.0
margin_right = 247.0
margin_bottom = 73.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
_sections_unfolded = [ "Pause" ]

[node name="Sprite" type="Sprite" parent="End_screen/ColorRect" index="4"]

position = Vector2( 394.567, 1002.68 )
scale = Vector2( 0.527663, 0.51903 )
texture = ExtResource( 9 )

[node name="Player" parent="." index="4" instance=ExtResource( 10 )]

position = Vector2( 342.889, 1055.52 )

[node name="StartPlank" type="StaticBody2D" parent="." index="5"]

editor/display_folded = true
position = Vector2( 14.8634, 238.73 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StartPlank" index="0"]

position = Vector2( 329.354, 880.663 )
shape = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="StartPlank" index="1"]

position = Vector2( 328.73, 880.725 )
texture = ExtResource( 12 )

[node name="Start_screen" type="Control" parent="." index="6"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="ColorRect" type="ColorRect" parent="Start_screen" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -14.0
margin_top = -14.0
margin_right = 730.0
margin_bottom = 1038.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="Start_screen/ColorRect" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 141.0
margin_top = 256.0
margin_right = 617.0
margin_bottom = 320.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Нажми на него"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors" ]

[node name="StartButton" type="TextureButton" parent="Start_screen/ColorRect" index="1"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 229.0
margin_top = 1004.0
margin_right = 492.0
margin_bottom = 1183.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
script = ExtResource( 13 )
_sections_unfolded = [ "Pause" ]

[node name="Start_music" type="AudioStreamPlayer" parent="Start_screen/ColorRect/StartButton" index="0"]

stream = ExtResource( 14 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="StartSound" type="AnimationPlayer" parent="Start_screen/ColorRect/StartButton/Start_music" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/soundstart = SubResource( 8 )
blend_times = [  ]

[node name="arrow" type="Sprite" parent="Start_screen/ColorRect" index="2"]

position = Vector2( 603.427, 985.977 )
rotation = 2.19441
scale = Vector2( 0.478179, 0.433263 )
texture = ExtResource( 15 )

[node name="arrow2" type="Sprite" parent="Start_screen/ColorRect" index="3"]

position = Vector2( 130.86, 986.999 )
rotation = 1.1005
scale = Vector2( 0.478179, -0.45483 )
texture = ExtResource( 15 )

[node name="LoadingScreen" type="Control" parent="." index="7"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Loading_screen" type="ColorRect" parent="LoadingScreen" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -11.0
margin_top = -9.0
margin_right = 728.0
margin_bottom = 1294.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 1 )

[node name="Loading_screen" parent="LoadingScreen/Loading_screen" index="0" instance=ExtResource( 16 )]

pause_mode = 2
margin_left = -12.0
margin_top = 443.0
margin_right = 757.0
margin_bottom = 862.0
expand = true
buffering_msec = 1000
_sections_unfolded = [ "Pause" ]

[node name="Camera2D" type="Camera2D" parent="." index="8"]

position = Vector2( 402.77, 1017.99 )
anchor_mode = 1
rotating = false
current = false
zoom = Vector2( 3, 3 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[node name="GUI" type="Control" parent="." index="9"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="score" type="Label" parent="GUI" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 18.0
margin_top = 19.0
margin_right = 258.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 17 )
text = "SCORE: "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="PauseButton" type="TextureButton" parent="GUI" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 646.0
margin_top = 17.0
margin_right = 699.0
margin_bottom = 72.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
_sections_unfolded = [ "Textures" ]

[node name="Icon" type="Sprite" parent="GUI/PauseButton" index="0"]

position = Vector2( 25.943, 28.057 )
scale = Vector2( 0.103721, 0.105058 )
texture = ExtResource( 18 )

[node name="Pause_screen" type="Control" parent="." index="10"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="ColorRect" type="ColorRect" parent="Pause_screen" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -29.0
margin_top = -16.0
margin_right = 748.0
margin_bottom = 1306.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 0.618784 )

[node name="Resume_label" type="Label" parent="Pause_screen/ColorRect" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 186.0
margin_top = 853.0
margin_right = 569.0
margin_bottom = 914.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Продолжить"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors" ]

[node name="Resume" type="TextureButton" parent="Pause_screen/ColorRect/Resume_label" index="0"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -29.0
margin_top = -20.0
margin_right = 412.0
margin_bottom = 68.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = SubResource( 5 )
group = null
_sections_unfolded = [ "Pause", "Textures" ]

[node name="Exit_label" type="Label" parent="Pause_screen/ColorRect" index="1"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 285.0
margin_top = 652.0
margin_right = 490.0
margin_bottom = 713.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Выйти"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Pause", "custom_colors" ]

[node name="Exit" type="TextureButton" parent="Pause_screen/ColorRect/Exit_label" index="0"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -50.0
margin_top = -15.0
margin_right = 247.0
margin_bottom = 73.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
_sections_unfolded = [ "Pause" ]

[node name="GameMusic" type="AudioStreamPlayer" parent="." index="11"]

editor/display_folded = true
stream = ExtResource( 19 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 2
bus = "Master"
_sections_unfolded = [ "Pause" ]

[node name="GameMusic" type="AnimationPlayer" parent="GameMusic" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/GameSound = SubResource( 9 )
blend_times = [  ]

[connection signal="pressed" from="End_screen/ColorRect/Retry_label/Retry" to="." method="_on_Retry_pressed"]

[connection signal="pressed" from="End_screen/ColorRect/Exit_label/Exit" to="." method="_on_Exit_pressed"]

[connection signal="pressed" from="Start_screen/ColorRect/StartButton" to="Start_screen/ColorRect/StartButton" method="_on_StartButton_pressed"]

[connection signal="pressed" from="GUI/PauseButton" to="." method="_on_PauseButton_pressed"]

[connection signal="pressed" from="Pause_screen/ColorRect/Resume_label/Resume" to="." method="_on_Resume_pressed"]

[connection signal="pressed" from="Pause_screen/ColorRect/Exit_label/Exit" to="." method="_on_Exit_pressed"]


